first trial responsive

--- a/css/blocks/_arrow-down.scss
+++ b/css/blocks/_arrow-down.scss
@@ -1,11 +1,14 @@
 .arrow-down {
-  display: block;
-  height: 15px;
-  width: 30px;
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-image: url('/img/icons/arrow-scroll.svg');
-  background-repeat: no-repeat;
-}
+  display: inline-block;
+  text-align: center;
+  margin: auto 0;
+
+
+    &__icon {
+    justify-content: flex-end;
+    display: inline-block;
+    text-align: center;
+    height: rem(15px);
+    width: rem(30px);
+  }  
+} 
