--- a/css/blocks/_btn.scss
+++ b/css/blocks/_btn.scss
@@ -2,8 +2,8 @@
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
-  padding: 9px 16px;
-  font-size: 13px;
+  padding: rem(9px) rem(16px);
+  font-size: rem(13px);
   font-family: "Ubuntu";
   font-weight: 500;
   background-color: $orange;
