--- a/css/blocks/_menu.scss
+++ b/css/blocks/_menu.scss
@@ -1,10 +1,16 @@
+.menu {
+  @include tablets {
+    display: none;
+  }
+}
+
 .menu__list {
   display: flex;
   align-items: center;
 }
 
 .menu__item {
-  margin-right: 15px;
+  margin-right: rem(15px);
   display: flex;
   align-items: center;
 
@@ -15,7 +21,7 @@
     height: 4px;
     background-color: #fff;
     border-radius: 50%;
-    margin-left: 16px;
+    margin-left: rem(16px);
   }
 
   &:last-child {
@@ -28,8 +34,9 @@
 }
 
 .menu__link {
+  white-space: nowrap;
   text-decoration: none;
-  font-size: 13px;
+  font-size: rem(13px);
   font-weight: 500;
   color: #fff;
   text-transform: uppercase;
