--- a/css/main.css
+++ b/css/main.css
@@ -418,8 +418,11 @@ html,
 body {
   height: 100%; }
 
+html {
+  font-size: 16px; }
+
 body {
-  font-size: 16px;
+  font-size: rem(16px);
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -428,7 +431,6 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 960px;
   min-height: 100%;
   overflow: hidden; }
 
@@ -437,12 +439,16 @@ body {
   min-height: 650px; }
 
 .container {
-  width: 940px;
+  max-width: 940px;
+  width: 93%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   height: 100%;
   justify-content: center; }
+
+img {
+  max-width: 100%; }
 
 h1,
 h2,
@@ -450,7 +456,7 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
+  margin: 0;
   font-weight: normal; }
 
 table {
@@ -474,6 +480,11 @@ footer {
 * {
   box-sizing: border-box; }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block; }
+
 .hero {
   background: url("../img/hero/bg.jpg") center center/cover no-repeat;
   position: relative; }
@@ -485,18 +496,41 @@ footer {
   display: flex;
   flex: 0.9;
   align-items: center; }
+  @media screen and (max-width: 768px) {
+    .hero__content {
+      margin-top: 5rem;
+      text-align: center;
+      flex-direction: column;
+      padding: 0 20%; } }
+  @media screen and (max-width: 480px) {
+    .hero__content {
+      padding: 0 15%; } }
 
 .hero__content-text {
-  margin-left: 20px; }
+  flex: 1;
+  margin-left: 1.25rem;
+  margin-top: 5.625rem; }
+  @media screen and (max-width: 768px) {
+    .hero__content-text {
+      text-align: center;
+      margin-top: 2.5rem;
+      margin-left: 0rem; } }
+  @media screen and (max-width: 480px) {
+    .hero__content-text {
+      margin-top: 1.875rem;
+      margin-left: 0rem; } }
 
 .hero__desc {
-  font-size: 65px;
+  font-size: 4.0625rem;
   font-family: 'Lifehack-Medium';
   line-height: 1;
   color: #fff; }
+  @media screen and (max-width: 480px) {
+    .hero__desc {
+      font-size: 3.375rem; } }
 
 .header {
-  padding-top: 10px;
+  padding-top: 0.625rem;
   display: flex;
   align-items: center;
   justify-content: space-between; }
@@ -506,17 +540,26 @@ footer {
   justify-content: flex-end;
   align-items: center; }
 
+.header__links {
+  display: flex;
+  align-items: center; }
+
 .header__order-btn {
-  margin-left: 15px; }
+  margin-left: 0.9375rem;
+  font-size: 0.8125rem; }
   .header__order-btn:hover {
     background-color: #c1401e; }
+
+@media screen and (max-width: 768px) {
+  .menu {
+    display: none; } }
 
 .menu__list {
   display: flex;
   align-items: center; }
 
 .menu__item {
-  margin-right: 15px;
+  margin-right: 0.9375rem;
   display: flex;
   align-items: center; }
   .menu__item:after {
@@ -526,15 +569,16 @@ footer {
     height: 4px;
     background-color: #fff;
     border-radius: 50%;
-    margin-left: 16px; }
+    margin-left: 1rem; }
   .menu__item:last-child {
     margin-right: 0px; }
     .menu__item:last-child:after {
       display: none; }
 
 .menu__link {
+  white-space: nowrap;
   text-decoration: none;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 500;
   color: #fff;
   text-transform: uppercase; }
@@ -543,67 +587,103 @@ footer {
   text-decoration: none;
   text-transform: uppercase;
   color: #fff;
-  padding: 9px 16px;
-  font-size: 13px;
+  padding: 0.5625rem 1rem;
+  font-size: 0.8125rem;
   font-family: "Ubuntu";
   font-weight: 500;
   background-color: #e45028;
   border-radius: 5px; }
 
 .section-title {
-  font-size: 72px;
+  font-size: 4.5rem;
   font-family: 'Gagalin-Regular';
   color: #f9b43b;
-  line-height: 1; }
+  line-height: 1;
+  margin-bottom: 2.8125rem; }
+  @media screen and (max-width: 480px) {
+    .section-title {
+      font-size: 3.125rem;
+      margin-bottom: 1.875rem; } }
   .section-title--color-black {
     color: #2f3234; }
   .section-title--centered {
     text-align: center; }
 
+.section-title__mobile {
+  font-size: 3.9375rem;
+  font-family: 'Gagalin-Regular';
+  color: #f9b43b;
+  line-height: 1; }
+
 .arrow-down {
-  display: block;
-  height: 15px;
-  width: 30px;
-  position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-image: url("/img/icons/arrow-scroll.svg");
-  background-repeat: no-repeat; }
+  display: inline-block;
+  text-align: center;
+  margin: auto 0; }
+  .arrow-down__icon {
+    justify-content: flex-end;
+    display: inline-block;
+    text-align: center;
+    height: 0.9375rem;
+    width: 1.875rem; }
 
 .best {
   background: url("/img/best/bg.jpg") center center/cover no-repeat; }
 
 .best__list {
   display: flex; }
+  @media screen and (max-width: 480px) {
+    .best__list {
+      flex-direction: column; } }
 
 .best__item {
   flex: 1;
-  margin-right: 36px; }
+  margin-right: 2.25rem; }
   .best__item:last-child {
     margin-right: 0; }
+  @media screen and (max-width: 480px) {
+    .best__item {
+      display: flex;
+      margin-right: 0;
+      align-items: center;
+      margin-bottom: 2.8125rem; } }
+
+@media screen and (max-width: 480px) {
+  .feature {
+    display: flex;
+    text-align: left; } }
 
 .feature__desc {
   text-align: center; }
+  @media screen and (max-width: 480px) {
+    .feature__desc {
+      text-align: left;
+      width: 72%; } }
 
 .feature__pic {
   display: flex;
   justify-content: center;
-  margin-bottom: 35px; }
+  margin-bottom: 2.1875rem; }
+  @media screen and (max-width: 480px) {
+    .feature__pic {
+      width: 28%; } }
 
 .feature__title {
-  font-size: 24px;
+  font-size: 1.5rem;
   color: #2f3234;
   font-family: "Lifehack-Medium";
-  font-weight: 500; }
+  font-weight: 500;
+  margin-bottom: 1.25rem; }
 
 .feature__text {
   line-height: 1.7;
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #2f3234;
   font-family: "Ubuntu";
   font-weight: 300;
   text-align: center; }
+  @media screen and (max-width: 480px) {
+    .feature__text {
+      text-align: left; } }
 
 .reviews {
   width: 100%;
@@ -617,12 +697,17 @@ footer {
   background-size: cover;
   width: 25%;
   height: 50%;
-  padding: 50px 20px;
+  padding: 3.125rem 1.25rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   z-index: 1;
   position: relative; }
+  @media screen and (max-width: 768px) {
+    .reviews__item {
+      width: 50%;
+      height: 25%;
+      padding: 2% 7%; } }
   .reviews__item:after {
     content: '';
     position: absolute;
@@ -642,13 +727,26 @@ footer {
 .reviews__content {
   opacity: 0;
   transform: scale(0.3); }
+  @media screen and (max-width: 768px) {
+    .reviews__content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center; } }
 
 .reviews__title {
-  font-size: 14px;
+  font-size: 0.875rem;
   color: #ffffff;
   font-family: "Gagalin-Regular";
   font-weight: 400;
-  margin-bottom: 30px; }
+  margin-bottom: 1.875rem; }
+  @media screen and (max-width: 768px) {
+    .reviews__title {
+      margin-bottom: 6%; } }
+  @media screen and (max-width: 480px) {
+    .reviews__title {
+      font-size: 1.5rem;
+      margin-bottom: 1.5625rem; } }
 
 .reviews__desc {
   font-size: 14px;
@@ -656,11 +754,427 @@ footer {
   color: #ffffff;
   font-family: "Ubuntu";
   font-weight: 300;
-  margin-bottom: 30px; }
+  margin-bottom: 1.875rem; }
+  @media screen and (max-width: 768px) {
+    .reviews__desc {
+      margin-bottom: 6%; } }
+  @media screen and (max-width: 480px) {
+    .reviews__desc {
+      display: none; } }
 
 .reviews__btn {
   background-color: #2f3234; }
   .reviews__btn:hover {
     background-color: #1f2122; }
+
+.hamburger-menu-link {
+  position: relative;
+  height: 1.375rem;
+  align-items: center;
+  margin-left: 1.875rem;
+  display: none; }
+  @media screen and (max-width: 768px) {
+    .hamburger-menu-link {
+      display: inline-flex; } }
+
+.hamburger-menu-link__bars, .hamburger-menu-link__bars:before, .hamburger-menu-link__bars:after {
+  background: #fff;
+  width: 1.5625rem;
+  height: 0.25rem;
+  border-radius: 0.1875rem; }
+.hamburger-menu-link__bars:before, .hamburger-menu-link__bars:after {
+  content: "";
+  display: inline-flex;
+  position: absolute; }
+.hamburger-menu-link__bars:before {
+  top: 0; }
+.hamburger-menu-link__bars:after {
+  bottom: 0; }
+
+.logo {
+  height: 4.375rem;
+  width: 5.625rem; }
+
+.team {
+  height: 100vh;
+  background-image: url("../../img/team/team-bg.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative; }
+  .team__content {
+    width: 50%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(62, 64, 66, 0.93);
+    padding: 7.5% 8% 8% 10%; }
+    @media screen and (max-width: 768px) {
+      .team__content {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center; } }
+
+.team__item {
+  color: #fff;
+  margin-top: 1.875rem; }
+  @media screen and (max-width: 768px) {
+    .team__item {
+      text-align: center; } }
+  .team__item-title {
+    font-family: 'Gagalin-Regular';
+    font-size: 0.875rem;
+    position: relative;
+    display: inline-flex; }
+    @media screen and (max-width: 768px) {
+      .team__item-title {
+        font-size: 1.5rem; } }
+    .team__item-title::before {
+      content: '';
+      display: inline-block;
+      width: 0;
+      height: 0;
+      border: 4px solid transparent;
+      border-bottom: none;
+      border-top: 5px solid #f9b43b;
+      position: absolute;
+      top: 0.5rem;
+      left: -0.9375rem; }
+  .team__item--active .team__item-title {
+    color: #f9b43b; }
+  .team__item--active .team__item-info {
+    height: 100%; }
+  .team__item--active .team__item-title::before {
+    transform: rotate(180deg); }
+
+.team__item-info {
+  display: flex;
+  margin-top: 0.9375rem;
+  height: 0;
+  overflow: hidden;
+  justify-content: flex-start; }
+  @media screen and (max-width: 768px) {
+    .team__item-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center; } }
+
+.team__item-box {
+  flex: 0 0 auto;
+  font-size: 0.875rem;
+  margin-left: 1.5625rem;
+  font-family: "Ubuntu"; }
+  @media screen and (max-width: 768px) {
+    .team__item-box {
+      margin-top: 0.625rem;
+      margin-left: 0; } }
+
+.team__item-work {
+  font-weight: 700; }
+
+.team__item-desc {
+  max-width: 13.75rem;
+  line-height: 1.8;
+  margin-top: 0.625rem;
+  font-weight: 300; }
+  @media screen and (max-width: 768px) {
+    .team__item-desc {
+      max-width: 21.25rem; } }
+
+.team__item-avatar {
+  border-radius: 50%;
+  width: 6.25rem;
+  height: 6.25rem;
+  border-radius: 50%;
+  background-size: cover;
+  overflow: hidden; }
+
+.menu-acco {
+  height: 100vh;
+  width: 100%;
+  background-image: url("../../img/menu/menu-bg.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  color: #fff;
+  display: flex;
+  justify-content: space-between; }
+
+.menu-acco__title {
+  margin: 6.25rem 0 0 6.25rem;
+  color: #fff;
+  display: block; }
+  @media screen and (max-width: 480px) {
+    .menu-acco__title {
+      margin: 2.5rem 0 0 2.5rem; } }
+
+.menu-acco__content {
+  display: flex;
+  justify-content: space-between; }
+
+.menu-acco__list, .menu-acco__item {
+  display: flex;
+  justify-content: flex-end; }
+
+.menu-acco__item-title {
+  line-height: 5rem;
+  white-space: nowrap;
+  font-family: 'Gagalin-Regular';
+  font-size: 2.5rem;
+  transform: rotate(-90deg);
+  transform-origin: 0 0;
+  margin-bottom: -2.5rem; }
+
+.menu-acco__trigger {
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  width: 5rem;
+  align-items: flex-end;
+  position: relative; }
+
+.menu-acco__item--active .menu-acco__desc {
+  width: 34.375rem;
+  padding: 10% 6% 25%; }
+@media screen and (max-width: 768px) {
+  .menu-acco__item--active {
+    width: 0; } }
+
+.menu-acco__desc {
+  width: 0;
+  line-height: 2;
+  font-size: 0.875rem;
+  font-family: "Ubuntu";
+  font-weight: 300;
+  background-color: rgba(47, 49, 51, 0.93);
+  overflow: hidden; }
+
+.form {
+  width: 100%;
+  max-width: 940px;
+  color: #fff; }
+  @media screen and (max-width: 768px) {
+    .form {
+      padding: 0 20%; } }
+  .form__tag {
+    display: flex;
+    margin-left: -20px;
+    color: #fff;
+    font-size: 0.875rem;
+    color: #ffffff;
+    font-family: "Ubuntu";
+    font-weight: 300; }
+    @media screen and (max-width: 768px) {
+      .form__tag {
+        flex-direction: column;
+        padding: 0 20%; } }
+    @media screen and (max-width: 480px) {
+      .form__tag {
+        padding: 0; } }
+  .form__row {
+    display: flex;
+    width: 100%;
+    margin-top: 20px; }
+    @media screen and (max-width: 480px) {
+      .form__row {
+        justify-content: center; } }
+  .form__col {
+    width: 50%; }
+    @media screen and (max-width: 768px) {
+      .form__col {
+        width: 100%; } }
+  .form__label {
+    display: block;
+    width: 100%;
+    margin-left: 1.25rem; }
+  .form__text {
+    font-size: 0.875rem; }
+  .form__input {
+    margin: 0.625rem 0 0;
+    width: 100%;
+    padding: 0.3125rem 1.25rem;
+    resize: none;
+    outline: none;
+    border-radius: 5px;
+    border: 2px solid #d1cfcb; }
+    .form__input-textarea {
+      height: 6.875rem;
+      resize: none;
+      vertical-align: top; }
+    .form__input:focus {
+      border: 2px solid #f9b43b; }
+
+.order {
+  height: 100vh;
+  background-image: url("../../img/form/form-bg.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+.order__form-button {
+  text-decoration: none;
+  border: 0;
+  margin-left: 1.25rem; }
+
+.order__form-button-reset {
+  text-transform: none;
+  background: transparent;
+  border: 0;
+  font-size: 0.875rem;
+  color: #fff;
+  margin: 0 0.625rem; }
+
+@media screen and (max-width: 480px) {
+  .order__form-btn {
+    margin-top: 2.1875rem; } }
+
+.st-radio {
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 1.25rem; }
+  .st-radio__input {
+    width: auto;
+    width: 1rem;
+    height: 1rem;
+    opacity: 0;
+    margin-left: -16px; }
+    .st-radio__input:checked ~ .st-radio__fake::after {
+      opacity: 1; }
+  .st-radio__fake {
+    width: 15px;
+    height: 15px;
+    flex: 0 0 auto;
+    border-radius: 50%;
+    background-color: #fff;
+    position: relative; }
+    .st-radio__fake::after {
+      content: '';
+      position: absolute;
+      width: 7px;
+      height: 7px;
+      border-radius: 50%;
+      background-color: #e34f27;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: 0.3s; }
+  .st-radio__text {
+    display: inline-block;
+    padding: 0 0 0 0.625rem;
+    font-size: 0.875rem; }
+
+.map {
+  background: url("../../img/map/map.jpg") center bottom no-repeat;
+  background-size: cover; }
+
+.footer {
+  background-color: #121212;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0.625rem 0;
+  font-family: 'Ubuntu';
+  font-weight: 300;
+  min-height: 3.75rem; }
+
+.footer__container {
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
+  @media screen and (max-width: 480px) {
+    .footer__container {
+      flex-direction: column;
+      align-items: center;
+      text-align: center; } }
+
+.footer__col {
+  width: 50%; }
+
+.footer__address {
+  color: #ffffff;
+  font-size: 0.875rem;
+  flex: 1 1 auto; }
+
+.footer__phone {
+  color: #e35028;
+  text-decoration: none;
+  font-size: 0.875rem;
+  font-weight: 700; }
+  .footer__phone-icon {
+    height: 0.6875rem;
+    width: 0.6875rem; }
+
+.footer__col_right {
+  text-align: right;
+  margin-bottom: 0; }
+  @media screen and (max-width: 480px) {
+    .footer__col_right {
+      text-align: center; } }
+
+.st-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-left: 1.25rem; }
+  .st-checkbox__input {
+    width: auto;
+    width: 1rem;
+    height: 1rem;
+    opacity: 0;
+    margin-left: -1rem; }
+    .st-checkbox__input:checked ~ .st-checkbox__fake::after {
+      opacity: 1; }
+  .st-checkbox__fake {
+    width: 15px;
+    height: 15px;
+    flex: 0 0 auto;
+    background-color: #fff;
+    position: relative; }
+    .st-checkbox__fake::after {
+      content: '';
+      position: absolute;
+      width: 12px;
+      height: 12px;
+      background-image: url("../../img/icons/check.png");
+      background-size: contain;
+      background-position: center;
+      background-repeat: no-repeat;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: 0.3s; }
+  .st-checkbox__text {
+    display: inline-block;
+    padding: 0 0 0 0.625rem;
+    font-size: 0.875rem; }
+
+.socials {
+  position: relative;
+  top: 50%; }
+
+.socials__item {
+  display: inline-block;
+  padding-left: 0.625rem; }
+
+.socials__link {
+  display: inline-block;
+  max-width: 1.4375rem;
+  max-height: 1.25rem;
+  opacity: .3;
+  transition: .3s; }
+  .socials__link:hover {
+    opacity: 1; }
+
+.socials__link-icon {
+  width: 1.25rem;
+  height: 1.25rem; }
 
 /*# sourceMappingURL=main.css.map */
