--- a/css/blocks/_best.scss
+++ b/css/blocks/_best.scss
@@ -4,13 +4,23 @@
 
 .best__list {
   display: flex;
+
+  @include phones {
+    flex-direction: column;
+  }
 }
 
 .best__item {
   flex: 1;
-  margin-right: 36px;
-
+  margin-right: rem(36px);
   &:last-child {
     margin-right: 0;
+  }
+
+  @include phones {
+    display: flex;
+    margin-right: 0;
+    align-items: center;
+    margin-bottom: rem(45px);
   }
 }
