--- a/css/blocks/_hero.scss
+++ b/css/blocks/_hero.scss
@@ -11,15 +11,48 @@
   display: flex;
   flex: 0.9;
   align-items: center;
+
+  @include tablets {
+    margin-top: rem(80px);
+    text-align: center;
+    flex-direction: column;
+    padding: 0 20%;
+  }
+  
+  @include phones {
+    padding: 0 15%;
+  }
 }
 
+
 .hero__content-text {
-  margin-left: 20px;
+  flex: 1;
+  margin-left: rem(20px);
+  margin-top: rem(90px);
+
+  @include tablets {
+    text-align: center;
+    margin-top: rem(40px);
+    margin-left: rem(0px)
+  }
+  
+  @include phones  {
+    margin-top: rem(30px);
+    margin-left: rem(0px)
+  }
+}
+
+.hero__content-image {
+  // flex: 1;
 }
 
 .hero__desc {
-  font-size: 65px;
+  font-size: rem(65px);
   font-family: 'Lifehack-Medium';
   line-height: 1;
   color: #fff;
+
+  @include phones {
+    font-size: rem(54px);
+  }
 }
