--- a/css/blocks/_section-title.scss
+++ b/css/blocks/_section-title.scss
@@ -1,8 +1,14 @@
 .section-title {
-  font-size: 72px;
+  font-size: rem(72px);
   font-family: 'Gagalin-Regular';
   color: $yellow;
   line-height: 1; 
+  margin-bottom: rem(45px);
+
+@include phones {
+  font-size: rem(50px);
+  margin-bottom: rem(30px);
+}
 
   &--color-black {
     color: #2f3234;
@@ -11,4 +17,11 @@
   &--centered {
     text-align: center;
   }
+}
+
+.section-title__mobile {
+  font-size: rem(63px);
+  font-family: 'Gagalin-Regular';
+  color: $yellow;
+  line-height: 1;
 }
