--- a/css/layout/_layout.scss
+++ b/css/layout/_layout.scss
@@ -3,8 +3,12 @@ body {
   height: 100%;
 }
 
-body {
+html {
   font-size: 16px;
+}
+
+body {
+  font-size: rem(16px);
   line-height: 1.42;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -14,7 +18,6 @@ body {
 .wrapper {
   position: relative;
   width: 100%;
-  min-width: 940px + 20px;
   min-height: 100%;
   overflow: hidden;
 }
@@ -25,7 +28,8 @@ body {
 }
 
 .container {
-  width: 940px;
+  max-width: 940px;
+  width: 93%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -34,13 +38,18 @@ body {
 }
 
 // tag styles reset
+
+img {
+  max-width: 100%; 
+}
+
 h1,
 h2,
 h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
+  margin: 0;
   font-weight: normal;
 }
 
@@ -72,3 +81,8 @@ footer {
   box-sizing: border-box;
 }
 
+img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
