--- a/css/blocks/_hamburger-menu-link.scss
+++ b/css/blocks/_hamburger-menu-link.scss
@@ -7,13 +7,19 @@
 
 	@include tablets {
 		display: inline-flex;
+		margin-left: rem(-50px);
+		z-index: 50;
+		// position: fixed;
+		// top: 0;
+		// right: rem(30px);
 	}
 }
 
 .hamburger-menu-link__bars {
+
 	&, &:before, &:after {
 		background: #fff;
-		width: rem(25px);
+		width: rem(24px);
 		height: rem(4px);
 		border-radius: rem(3px);
 	}
@@ -23,12 +29,86 @@
 		display: inline-flex;
 		position: absolute;
 	}
-
+	
 	&:before {
 		top: 0;
+
+		@include tablets {
+			// transform: rotate(45deg);
+			// transform-origin: left bottom;
+			
+		}
+
 	}
 
 	&:after {
 		bottom: 0;
+		@include tablets {
+			// transform: rotate(-45deg);
+			// transform-origin: left top;
+			
+		}
 	}
 }
+
+
+// .hamburger-menu-link--active {
+// 	position: relative;
+// 	height: rem(22px);
+// 	align-items: center;
+// 	margin-left: rem(30px);
+// 	display: none;
+
+// 	@include tablets {
+// 		display: inline-flex;
+// 		margin-left: rem(-50px);
+// 		z-index: 50;
+// 	}
+
+// 	.hamburger-menu-link__bars {
+// 		z-index: 100;
+// 		width: rem(24px);
+// 		height: rem(4px);
+// 		background: #fff;
+// 		width: rem(24px);
+// 		height: rem(4px);
+// 		border-radius: rem(3px);
+		
+// 		&:before, &:after {
+// 			background: #fff;
+// 			width: rem(24px);
+// 			height: rem(4px);
+// 			border-radius: rem(3px);
+// 		}
+	
+// 		&:before, &:after {
+// 			content: "";
+// 			display: inline-flex;
+// 			position: fixed;
+// 		}
+		
+// 		&:before {
+// 			top: 0;
+	
+// 			@include tablets {
+// 				transform: rotate(45deg);
+// 				transform-origin: left bottom;
+				
+// 			}
+	
+// 		}
+	
+// 		&:after {
+// 			bottom: 0;
+// 			@include tablets {
+// 				transform: rotate(-45deg);
+// 				transform-origin: left top;
+				
+// 			}
+// 		}
+// 	}
+	
+
+
+
+// }
