--- a/css/layout/_layout.scss
+++ b/css/layout/_layout.scss
@@ -13,6 +13,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Ubuntu';
+
+  // @include tablets { как убрать скрол
+  // margin: 0px;
+  // overflow: hidden;
+  // }
+  
 }
 
 .wrapper {
@@ -24,7 +30,8 @@ body {
 
 .section {
   height: 100vh;
-  min-height: 650px;
+  // min-height: 650px;
+  
 }
 
 .container {
